// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListView field filter should switch back to default mode on ESC keydown 1`] = `
Object {
  "displayMode": "DISPLAY_MODE_SEARCH",
  "displayedItems": Array [
    Object {
      "checked": true,
      "index": 1,
      "label": "Albania",
      "onChange": [Function],
      "value": "country2",
    },
    Object {
      "checked": true,
      "index": 2,
      "label": "Algeria",
      "onChange": [Function],
      "value": "country3",
    },
  ],
  "emptyLabel": "No element",
  "getItemHeight": [Function],
  "headerDefault": Array [
    Object {
      "icon": "talend-search",
      "id": "my-list-view-search",
      "label": "Search for specific values",
      "onClick": [Function],
    },
  ],
  "headerInput": Array [
    Object {
      "icon": "talend-cross",
      "id": "abort",
      "label": "Abort",
      "onClick": [Function],
    },
  ],
  "headerLabel": "Countries",
  "items": Array [
    Object {
      "checked": false,
      "index": 0,
      "label": "Afghanistan",
      "onChange": [Function],
      "value": "country1",
    },
    Object {
      "checked": true,
      "index": 1,
      "label": "Albania",
      "onChange": [Function],
      "value": "country2",
    },
    Object {
      "checked": true,
      "index": 2,
      "label": "Algeria",
      "onChange": [Function],
      "value": "country3",
    },
    Object {
      "checked": false,
      "index": 3,
      "label": "Andorra",
      "onChange": [Function],
      "value": "country4",
    },
  ],
  "noResultLabel": "No element matching your filter",
  "onAddKeyDown": [Function],
  "onInputChange": [Function],
  "onToggleAll": [Function],
  "required": true,
  "searchCriteria": "ia",
  "searchPlaceholder": "Search filter",
  "toggleAllChecked": true,
}
`;

exports[`ListView field filter should switch back to default mode on ESC keydown 2`] = `
Object {
  "displayMode": "DISPLAY_MODE_DEFAULT",
  "displayedItems": Array [
    Object {
      "checked": false,
      "index": 0,
      "label": "Afghanistan",
      "onChange": [Function],
      "value": "country1",
    },
    Object {
      "checked": true,
      "index": 1,
      "label": "Albania",
      "onChange": [Function],
      "value": "country2",
    },
    Object {
      "checked": true,
      "index": 2,
      "label": "Algeria",
      "onChange": [Function],
      "value": "country3",
    },
    Object {
      "checked": false,
      "index": 3,
      "label": "Andorra",
      "onChange": [Function],
      "value": "country4",
    },
  ],
  "emptyLabel": "No element",
  "getItemHeight": [Function],
  "headerDefault": Array [
    Object {
      "icon": "talend-search",
      "id": "my-list-view-search",
      "label": "Search for specific values",
      "onClick": [Function],
    },
  ],
  "headerInput": Array [
    Object {
      "icon": "talend-search",
      "id": "my-list-view-search",
      "label": "Search for specific values",
      "onClick": [Function],
    },
  ],
  "headerLabel": "Countries",
  "items": Array [
    Object {
      "checked": false,
      "index": 0,
      "label": "Afghanistan",
      "onChange": [Function],
      "value": "country1",
    },
    Object {
      "checked": true,
      "index": 1,
      "label": "Albania",
      "onChange": [Function],
      "value": "country2",
    },
    Object {
      "checked": true,
      "index": 2,
      "label": "Algeria",
      "onChange": [Function],
      "value": "country3",
    },
    Object {
      "checked": false,
      "index": 3,
      "label": "Andorra",
      "onChange": [Function],
      "value": "country4",
    },
  ],
  "noResultLabel": "No element matching your filter",
  "onAddKeyDown": [Function],
  "onInputChange": [Function],
  "onToggleAll": [Function],
  "required": true,
  "searchCriteria": undefined,
  "searchPlaceholder": "Search filter",
  "toggleAllChecked": false,
}
`;

exports[`ListView field filter should switch back to default mode on abort button click 1`] = `
Object {
  "displayMode": "DISPLAY_MODE_SEARCH",
  "displayedItems": Array [
    Object {
      "checked": true,
      "index": 1,
      "label": "Albania",
      "onChange": [Function],
      "value": "country2",
    },
    Object {
      "checked": true,
      "index": 2,
      "label": "Algeria",
      "onChange": [Function],
      "value": "country3",
    },
  ],
  "emptyLabel": "No element",
  "getItemHeight": [Function],
  "headerDefault": Array [
    Object {
      "icon": "talend-search",
      "id": "my-list-view-search",
      "label": "Search for specific values",
      "onClick": [Function],
    },
  ],
  "headerInput": Array [
    Object {
      "icon": "talend-cross",
      "id": "abort",
      "label": "Abort",
      "onClick": [Function],
    },
  ],
  "headerLabel": "Countries",
  "items": Array [
    Object {
      "checked": false,
      "index": 0,
      "label": "Afghanistan",
      "onChange": [Function],
      "value": "country1",
    },
    Object {
      "checked": true,
      "index": 1,
      "label": "Albania",
      "onChange": [Function],
      "value": "country2",
    },
    Object {
      "checked": true,
      "index": 2,
      "label": "Algeria",
      "onChange": [Function],
      "value": "country3",
    },
    Object {
      "checked": false,
      "index": 3,
      "label": "Andorra",
      "onChange": [Function],
      "value": "country4",
    },
  ],
  "noResultLabel": "No element matching your filter",
  "onAddKeyDown": [Function],
  "onInputChange": [Function],
  "onToggleAll": [Function],
  "required": true,
  "searchCriteria": "ia",
  "searchPlaceholder": "Search filter",
  "toggleAllChecked": true,
}
`;

exports[`ListView field filter should switch back to default mode on abort button click 2`] = `
Object {
  "displayMode": "DISPLAY_MODE_DEFAULT",
  "displayedItems": Array [
    Object {
      "checked": false,
      "index": 0,
      "label": "Afghanistan",
      "onChange": [Function],
      "value": "country1",
    },
    Object {
      "checked": true,
      "index": 1,
      "label": "Albania",
      "onChange": [Function],
      "value": "country2",
    },
    Object {
      "checked": true,
      "index": 2,
      "label": "Algeria",
      "onChange": [Function],
      "value": "country3",
    },
    Object {
      "checked": false,
      "index": 3,
      "label": "Andorra",
      "onChange": [Function],
      "value": "country4",
    },
  ],
  "emptyLabel": "No element",
  "getItemHeight": [Function],
  "headerDefault": Array [
    Object {
      "icon": "talend-search",
      "id": "my-list-view-search",
      "label": "Search for specific values",
      "onClick": [Function],
    },
  ],
  "headerInput": Array [
    Object {
      "icon": "talend-search",
      "id": "my-list-view-search",
      "label": "Search for specific values",
      "onClick": [Function],
    },
  ],
  "headerLabel": "Countries",
  "items": Array [
    Object {
      "checked": false,
      "index": 0,
      "label": "Afghanistan",
      "onChange": [Function],
      "value": "country1",
    },
    Object {
      "checked": true,
      "index": 1,
      "label": "Albania",
      "onChange": [Function],
      "value": "country2",
    },
    Object {
      "checked": true,
      "index": 2,
      "label": "Algeria",
      "onChange": [Function],
      "value": "country3",
    },
    Object {
      "checked": false,
      "index": 3,
      "label": "Andorra",
      "onChange": [Function],
      "value": "country4",
    },
  ],
  "noResultLabel": "No element matching your filter",
  "onAddKeyDown": [Function],
  "onInputChange": [Function],
  "onToggleAll": [Function],
  "required": true,
  "searchCriteria": undefined,
  "searchPlaceholder": "Search filter",
  "toggleAllChecked": false,
}
`;

exports[`ListView field render should render ListView 1`] = `
<FieldTemplate
  description="This is the ListView field"
  errorMessage="This is wrong"
  id="my-list-view"
  isValid={true}
>
  <ListView
    displayedItems={
      Array [
        Object {
          "checked": false,
          "index": 0,
          "label": "Afghanistan",
          "onChange": [Function],
          "value": "country1",
        },
        Object {
          "checked": true,
          "index": 1,
          "label": "Albania",
          "onChange": [Function],
          "value": "country2",
        },
        Object {
          "checked": true,
          "index": 2,
          "label": "Algeria",
          "onChange": [Function],
          "value": "country3",
        },
        Object {
          "checked": false,
          "index": 3,
          "label": "Andorra",
          "onChange": [Function],
          "value": "country4",
        },
      ]
    }
    emptyLabel="No element"
    getItemHeight={[Function]}
    headerDefault={
      Array [
        Object {
          "icon": "talend-search",
          "id": "my-list-view-search",
          "label": "Search for specific values",
          "onClick": [Function],
        },
      ]
    }
    headerLabel="Countries"
    id="my-list-view"
    items={
      Array [
        Object {
          "checked": false,
          "index": 0,
          "label": "Afghanistan",
          "onChange": [Function],
          "value": "country1",
        },
        Object {
          "checked": true,
          "index": 1,
          "label": "Albania",
          "onChange": [Function],
          "value": "country2",
        },
        Object {
          "checked": true,
          "index": 2,
          "label": "Algeria",
          "onChange": [Function],
          "value": "country3",
        },
        Object {
          "checked": false,
          "index": 3,
          "label": "Andorra",
          "onChange": [Function],
          "value": "country4",
        },
      ]
    }
    noResultLabel="No element matching your filter"
    onAddKeyDown={[Function]}
    onInputChange={[Function]}
    onToggleAll={[Function]}
    required={true}
    searchCriteria={null}
    searchPlaceholder="Search filter"
    toggleAllChecked={false}
  />
</FieldTemplate>
`;

exports[`ListView field render should render no items message 1`] = `
<div
  class="tc-listview"
>
  <header
    class="tc-listview-header"
  >
    <strong>
      <!-- react-text: 5 -->
      Countries
      <!-- /react-text -->
      <!-- react-text: 6 -->
      *
      <!-- /react-text -->
    </strong>
    <div
      class="actions"
    >
      <button
        role="link"
        type="button"
        class="btn btn-link"
      >
        <svg
          class="tc-svg-icon"
          focusable="false"
          aria-hidden="true"
        >
          <use
            xlink:href="#talend-search"
          />
        </svg>
      </button>
    </div>
  </header>
  <span>
    No element
  </span>
</div>
`;
